2010-06-20  Susanne Moog  <typo3@susanne-moog.de>

	* Followup to #14636: Improvements to new Backend skin - Install tool login shadow fixed 
	* Fixed bug #14516: Strip background gradients - smaller image size and no wrong colors in browsers with color profile capability (Thanks to Helmut Hummel)
	* Followup to #14465: Make use of the new Sprite API - help in backend access lists (Thanks to Steffen Ritter)
	* Followup to #14465: Make use of the new Sprite API - delete icon in QuickEdit (Thanks to Steffen Gebert)
	* Followup to #14465: Make use of the new Sprite API - sys_language, sys_action (Thanks to Steffen Ritter)
	* Fixed bug #14788: Add fallback graphics for CSS3 background gradients (Thanks to Steffen Gebert)
	* Fixed bug #14755: Step 2 - Select method should be radio choice (On behalf of Steffen Kamper)
	* Fixed bug #14752: Add Update Wizards for Skinning Changes (Thanks to Steffen Ritter)

2010-06-20  Benjamin Mack  <benni@typo3.org>

	* Raised Extbase version to 1.2.0RC2
	* Fixed bug #14722: Remove info icon from CEs in page module (Thanks to Steffen Gebert)
	* Followup to #14733: Improvements to Backend skin - Added styling to missing parts of the Backend - TCEforms without tabs, TCEforms with Flexforms, TCEforms with IRRE, TSconfig help, help styling improvements
	* Followup to #13379: Sprite Icon API - Removed unneeded checks in ext_tables.php for t3skin (Thanks to Steffen Ritter)
	* Followup to #14733: Improvements to Backend skin - Exchanges "selection delete" icon to make it consistent look again (Thanks to Steffen Ritter)
	* Fixed bug #10424: Old version (3.x) screenshots in CSH (Big thanks to Philipp Gampe)
	* Followup to #14733: Improvements to Backend skin - Added styling to missing parts of the Backend

2010-06-19 Francois Suter  <francois@typo3.org>

	* Fixed bug: #14184: Scheduler: Handle invalid serialized exception objects
	* Fixed bug: #14792: Scheduler: Screenshots in the manual must be updated for new skin
